SIGN/include/kaz/sign.h


typedef enum {
    KAZ_LEVEL_128 = 128,    
    KAZ_LEVEL_192 = 192,    
    KAZ_LEVEL_256 = 256     
} kaz_sign_level_t;
typedef struct {
    int level;                  
    const char *algorithm_name; 
    size_t secret_key_bytes;    
    size_t public_key_bytes;    
    size_t hash_bytes;          
    size_t signature_overhead;  
    size_t s_bytes;             
    size_t t_bytes;             
    size_t s1_bytes;            
    size_t s2_bytes;            
    size_t s3_bytes;            
} kaz_sign_level_params_t;
const kaz_sign_level_params_t *kaz_sign_get_level_params(kaz_sign_level_t level);
#define KAZ_SIGN_SUCCESS           0
#define KAZ_SIGN_ERROR_MEMORY     -1
#define KAZ_SIGN_ERROR_RNG        -2
#define KAZ_SIGN_ERROR_INVALID    -3
#define KAZ_SIGN_ERROR_VERIFY     -4
#define KAZ_SIGN_ERROR_DER        -5
#define KAZ_SIGN_ERROR_X509       -6
#define KAZ_SIGN_ERROR_P12        -7
#define KAZ_SIGN_ERROR_HASH       -8
#define KAZ_SIGN_ERROR_BUFFER     -9
const char *kaz_sign_version(void);
int kaz_sign_version_number(void);
int kaz_sign_init_level(kaz_sign_level_t level);
void kaz_sign_clear_level(kaz_sign_level_t level);
void kaz_sign_clear_all(void);
int kaz_sign_keypair_ex(kaz_sign_level_t level,
                        unsigned char *pk,
                        unsigned char *sk);
int kaz_sign_signature_ex(kaz_sign_level_t level,
                          unsigned char *sig,
                          unsigned long long *siglen,
                          const unsigned char *msg,
                          unsigned long long msglen,
                          const unsigned char *sk);
int kaz_sign_verify_ex(kaz_sign_level_t level,
                       unsigned char *msg,
                       unsigned long long *msglen,
                       const unsigned char *sig,
                       unsigned long long siglen,
                       const unsigned char *pk);
int kaz_sign_hash_ex(kaz_sign_level_t level,
                     const unsigned char *msg,
                     unsigned long long msglen,
                     unsigned char *hash);
int kaz_sha3_256(const unsigned char *msg,
                 unsigned long long msglen,
                 unsigned char *out);
int kaz_sign_detached_ex(kaz_sign_level_t level,
                         unsigned char *sig,
                         unsigned long long *siglen,
                         const unsigned char *msg,
                         unsigned long long msglen,
                         const unsigned char *sk);
int kaz_sign_verify_detached_ex(kaz_sign_level_t level,
                                const unsigned char *sig,
                                unsigned long long siglen,
                                const unsigned char *msg,
                                unsigned long long msglen,
                                const unsigned char *pk);
int kaz_sign_pubkey_to_der(kaz_sign_level_t level,
                           const unsigned char *pk,
                           unsigned char *der,
                           unsigned long long *derlen);
int kaz_sign_pubkey_from_der(kaz_sign_level_t level,
                             const unsigned char *der,
                             unsigned long long derlen,
                             unsigned char *pk);
int kaz_sign_privkey_to_der(kaz_sign_level_t level,
                            const unsigned char *sk,
                            unsigned char *der,
                            unsigned long long *derlen);
int kaz_sign_privkey_from_der(kaz_sign_level_t level,
                              const unsigned char *der,
                              unsigned long long derlen,
                              unsigned char *sk);
int kaz_sign_generate_csr(kaz_sign_level_t level,
                          const unsigned char *sk,
                          const unsigned char *pk,
                          const char *subject,
                          unsigned char *csr,
                          unsigned long long *csrlen);
int kaz_sign_verify_csr(kaz_sign_level_t level,
                        const unsigned char *csr,
                        unsigned long long csrlen);
int kaz_sign_issue_certificate(kaz_sign_level_t level,
                               const unsigned char *issuer_sk,
                               const unsigned char *issuer_pk,
                               const char *issuer_name,
                               const unsigned char *csr,
                               unsigned long long csrlen,
                               unsigned long long serial,
                               int days,
                               unsigned char *cert,
                               unsigned long long *certlen);
int kaz_sign_cert_extract_pubkey(kaz_sign_level_t level,
                                 const unsigned char *cert,
                                 unsigned long long certlen,
                                 unsigned char *pk);
int kaz_sign_verify_certificate(kaz_sign_level_t level,
                                const unsigned char *cert,
                                unsigned long long certlen,
                                const unsigned char *issuer_pk);
int kaz_sign_create_p12(kaz_sign_level_t level,
                        const unsigned char *sk,
                        const unsigned char *pk,
                        const unsigned char *cert,
                        unsigned long long certlen,
                        const char *password,
                        const char *name,
                        unsigned char *p12,
                        unsigned long long *p12len);
int kaz_sign_load_p12(kaz_sign_level_t level,
                      const unsigned char *p12,
                      unsigned long long p12len,
                      const char *password,
                      unsigned char *sk,
                      unsigned char *pk,
                      unsigned char *cert,
                      unsigned long long *certlen);
int kaz_sign_pubkey_to_wire(kaz_sign_level_t level,
                            const unsigned char *pk, size_t pk_len,
                            unsigned char *out, size_t *out_len);
int kaz_sign_pubkey_from_wire(const unsigned char *wire, size_t wire_len,
                              kaz_sign_level_t *level,
                              unsigned char *pk, size_t *pk_len);
int kaz_sign_privkey_to_wire(kaz_sign_level_t level,
                             const unsigned char *sk, size_t sk_len,
                             unsigned char *out, size_t *out_len);
int kaz_sign_privkey_from_wire(const unsigned char *wire, size_t wire_len,
                               kaz_sign_level_t *level,
                               unsigned char *sk, size_t *sk_len);