SIGN/include/kaz/kdf.h


int kaz_hkdf_extract(const unsigned char *salt, size_t salt_len,
                     const unsigned char *ikm, size_t ikm_len,
                     unsigned char *prk, size_t *prk_len);
int kaz_hkdf_expand(const unsigned char *prk, size_t prk_len,
                    const unsigned char *info, size_t info_len,
                    unsigned char *okm, size_t okm_len);
int kaz_hkdf(const unsigned char *salt, size_t salt_len,
             const unsigned char *ikm, size_t ikm_len,
             const unsigned char *info, size_t info_len,
             unsigned char *okm, size_t okm_len);